Adding Multi Tree View

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ html{
 .container{
   display: flex;
   min-height: 100vh;
+  flex-direction: column;
   
   justify-content: center;
   align-items: center;
